# loops

./: .gitignore  CHANGES.txt  LICENSE.GPL  MANIFEST.in  README.txt  __init__.py  base.py  common.py  concept.py  configure.zcml  constraint.py  entity.py  external.py  helpers.txt  interfaces.py  main.py  predicate.py  psu.py  pyproject.toml  query.py  record.py  relation.py  relations.py  resource.py  schema.py  security.zcml  setup.py  setup_egg.py  table.py  target.py  task.py  test_resource.py  test_task.py  tests.py  type.py  util.py  version.py  view.py
agent/: .loops.agent.cfg  README.txt  config.py  core.py  interfaces.py  log.py  loops.tac  schedule.py  tests.py
browser/: action.py  action_macros.pt  add.pt  auth.py  calendar.pt  common.py  concept.pt  concept.py  concept_assign.pt  concept_children.pt  concept_details.pt  concept_macros.pt  concept_related.pt  concept_resources.pt  configure.zcml  configureFive.zcml  contents.pt  dataform.pt  document.pt  edit.pt  exportimport.pt  external.py  folder.py  form.py  form_macros.pt  info.pt  loops.css  loops.js  loops1.js  macros.py  manager.py  node.css  node.js  node.pt  node.py  node_macros.pt  node_target.pt  pageform.pt  popup.pt  relation_macros.pt  (+11 more)
classifier/: README.txt  base.py  browser.py  classifier_macros.pt  configure.zcml  interfaces.py  sample.py  standard.py  tests.py  testsetup.py
compound/: README.txt  base.py  interfaces.py  tests.py
config/: README.txt  base.py  configure.zcml  tests.py  view_macros.pt
constraint/: README.txt  base.py  configure.zcml  interfaces.py  tests.py
data/: loops_std.dmp  loops_std_de.dmp  loops_std_en.dmp  loops_std_update_de.dmp
deploy/: loops.nsi  make_setup  remove_sourcefiles.py
expert/: README.txt  concept.py  configure.zcml  field.py  filter.py  instance.py  interfaces.py  query.py  report.py  search.txt  setup.py  standard.py  tests.py  testsetup.py
i18n/: README.txt  browser.py  common.py  configure.zcml  i18n_macros.pt  tests.py
inst/: bluebream.zcml
integrator/: README.txt  browser.py  collection.py  collection_macros.pt  configure.zcml  interfaces.py  put.py  source.py  tests.py  testsetup.py
knowledge/: README.txt  browser.py  configure.zcml  interfaces.py  knowledge.py  knowledge_macros.pt  qualification.py  schema.py  setup.py  tests.py
layout/: base.py  browser.py  configure.zcml  interfaces.py  tests.py
locales/: loops.pot
loops/: README.txt  base.py  bluebream.zcml  common.py  concept.py  configure.zcml  helpers.txt  interfaces.py  main.py  overrides.zcml  predicate.py  psu.py  query.py  record.py  resource.py  security.zcml  securitypolicy.zcml  setup.py  table.py  target.py  type.py  util.py  view.py
media/: README.txt  asset.py  configure.zcml  interfaces.py  (+1 more)
(+643 files in other folders)
