[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loops"
version = "3.0.1"
description = "loops: linked objects for organizational process services"
readme = "README.md"
license = {text = "MIT"}
keywords = ["loops"]
authors = [{name = "Helmut Merz", email = "helmutm@cy55.de"}]

dependencies = [
	"cybertools",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["loops"]

[tool.pytest.ini_options]
addopts = "-vv"
python_files = "test_standard.py" # default: run only `standard` tests
# use .pytest.ini file with `python_files = test_*.py` to run all tests

