[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loops"
version = "3.0.1"
description = "loops: linked objects for organizational process services"
readme = "README.md"
license = {text = "MIT"}
keywords = ["loops"]
authors = [{name = "Helmut Merz", email = "helmutm@cy55.de"}]

dependencies = [
	"cybertools",
	"py-scopes",
	"markdown",
	"python-dotenv",
	"zope.app.appsetup",
	"zope.app.authentication",
	"zope.app.exception",
	"zope.app.renderer",
	"zope.browsermenu",
	"zope.i18n",
	"zope.pluggableauth",
	"zope.principalannotation",
	"zope.principalregistry",
	"zope.publisher",
	"zope.securitypolicy",
	"zope.site",
	"zope.thread",
]

[project.optional-dependencies]

server = [
	"waitress", 
	"ZConfig", 
	"zope.app.form",
	"zope.app.intid",
	"zope.app.publication",
	"zope.app.session",
	"zope.app.wsgi",
	"zope.app.zcmlfiles",
	"zope.contentprovider",
]

test = ["zope.testrunner"]

[tool.setuptools]
packages = ["loops"]

#[tool.pytest.ini_options]
#addopts = "-vv"
#python_files = "test_standard.py" # default: run only `standard` tests
# use .pytest.ini file with `python_files = test_*.py` to run all tests

